src/main/java/com/example/sidepot/member/error/BaseException.java
package com.example.sidepot.member.error;

public abstract class BaseException extends RuntimeException{
    public abstract BaseErrorCode getErrorCode();
}
